tests/should_fail/long_var.jou
def asdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasd() -> int:  # Error: variable name is too long: asdasdasdasdasdasdas...
    return '\0'
